hphp/hack/test/typecheck/instanceof_nullable.php.exp
object
File "instanceof_nullable.php", line 6, characters 21-22:
Was expecting a class, but got a nullable type (Typing[4026])
